[tool.poetry]
name = "northstardocs"
version = "0.1.0"
description = "This repo contains the technical documentation on all things related to making Northstar mods."
authors = ["R2Northstar"]
license = "MIT"
packages = [
    { include = "squirrel_syntax/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
pygments = { extras = ["plugins"], version = "^2.16.1" }
mkdocs-material = { extras = ["imaging"], version = "^9.5.34" }
mkdocs-git-committers-plugin = "^0.2.3"


[tool.poetry.dev-dependencies]

[tool.poetry.plugins."pygments.lexers"]
"squirrel" = "squirrel_support:SquirrelLexer"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
